k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-board
  labels:
    app: message-board
spec:
  replicas: 3
  selector:
    matchLabels:
      app: message-board
  template:
    metadata:
      labels:
        app: message-board
    spec:
      containers:
      - name: message-board
        image: pooyanazad/message-board:latest
        ports:
        - containerPort: 443
