k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-board-service
  labels:
    app: message-board
spec:
  type: ClusterIP
  selector:
    app: message-board
  ports:
  - port: 80
    targetPort: 443
