k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-board-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 172.232.157.149
    secretName: message-board-tls
  rules:
  - host: 172.232.157.149
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: message-board-service
            port:
              number: 80
